@@ -66,8 +66,13 @@ Bug fixes since 1.0
   dayOfMonth=31 with Coptic.
   This method can now throw an IllegalArgumentException
 
-- Overflowed calculations involving year throw ArithmeticException rather than
+- Chronologies
+  Overflowed calculations involving year throw ArithmeticException rather than
   produce a bogus result.
+
+- DateTimeFormatterBuilder.canBuildFormatter()
+  Previously this method always returned false.
+
 
 Enhancements since 1.0
 ----------------------
